--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "crawler_frontend",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://pentekmate.github.io/WebCrawler_Frontend",
+  "homepage": "https://pentekmate.github.io/WebCrawler_Frontend/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
